# docs/openapi.json
@@ -90,14 +90,36 @@
                 }
             }
         },
+        "/v1/feedback/list": {
+            "get": {
+                "tags": [
+                    "feedback"
+                ],
+                "summary": "Get User Feedbacks",
+                "description": "Handle feedback listing requests.\n\nArgs:\n    auth: The Authentication handler (FastAPI Depends) that will handle authentication Logic.\n\nReturns:\n    Response containing the list of feedbacks.",
+                "operationId": "get_user_feedbacks_v1_feedback_list_get",
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/FeedbacksListResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/v1/feedback": {
             "post": {
                 "tags": [
                     "feedback"
                 ],
-                "summary": "User Feedback",
-                "description": "Handle feedback requests.\n\nArgs:\n    feedback_request: The request containing feedback information.\n    auth: The Authentication handler (FastAPI Depends) that will handle authentication Logic.\n\nReturns:\n    Response indicating the status of the feedback.",
-                "operationId": "user_feedback_v1_feedback_post",
+                "summary": "Store User Feedback",
+                "description": "Handle feedback requests.\n\nArgs:\n    feedback_request: The request containing feedback information.\n    auth: The Authentication handler (FastAPI Depends) that will handle authentication Logic.\n\nReturns:\n    Response indicating the status of the feedback storage request.",
+                "operationId": "store_user_feedback_v1_feedback_post",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -108,6 +130,49 @@
                     },
                     "required": true
                 },
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/FeedbackResponse"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/feedback/{feedback_id}": {
+            "delete": {
+                "tags": [
+                    "feedback"
+                ],
+                "summary": "Remove User Feedback",
+                "description": "Handle feedback removal requests.\n\nArgs:\n    feedback_id: The feedback ID (UUID) to be removed.\n    auth: The Authentication handler (FastAPI Depends) that will handle authentication Logic.\n\nReturns:\n    Response indicating the status of the feedback removal.",
+                "operationId": "remove_user_feedback_v1_feedback__feedback_id__delete",
+                "parameters": [
+                    {
+                        "name": "feedback_id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "title": "Feedback Id"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful Response",
@@ -288,18 +353,45 @@
                         "type": "string",
                         "title": "Conversation Id"
                     },
-                    "feedback_object": {
-                        "type": "object",
-                        "title": "Feedback Object"
+                    "user_question": {
+                        "type": "string",
+                        "title": "User Question"
+                    },
+                    "llm_response": {
+                        "type": "string",
+                        "title": "Llm Response"
+                    },
+                    "sentiment": {
+                        "anyOf": [
+                            {
+                                "type": "integer"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "Sentiment"
+                    },
+                    "user_feedback": {
+                        "anyOf": [
+                            {
+                                "type": "string"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "User Feedback"
                     }
                 },
                 "type": "object",
                 "required": [
                     "conversation_id",
-                    "feedback_object"
+                    "user_question",
+                    "llm_response"
                 ],
                 "title": "FeedbackRequest",
-                "description": "Model representing a feedback request.\n\nAttributes:\n    conversation_id: The required conversation ID (UUID).\n    feedback_object: The JSON blob representing feedback.\n\nExample:\n    ```python\n    feedback_request = FeedbackRequest(\n        conversation_id=\"12345678-abcd-0000-0123-456789abcdef\",\n        feedback_object={\"rating\": 5, \"comment\": \"Great service!\"}\n    )\n    ```",
+                "description": "Model representing a feedback request.\n\nAttributes:\n    conversation_id: The required conversation ID (UUID).\n    user_question: The required user question.\n    llm_response: The required LLM response.\n    sentiment: The optional sentiment.\n    user_feedback: The optional user feedback.\n\nExample:\n    ```python\n    feedback_request = FeedbackRequest(\n        conversation_id=\"12345678-abcd-0000-0123-456789abcdef\",\n        user_question=\"what are you doing?\",\n        llm_response=\"I don't know\",\n        sentiment=-1,\n    )\n    ```",
                 "examples": [
                     {
                         "conversation_id": "12345678-abcd-0000-0123-456789abcdef",
@@ -326,6 +418,30 @@
                 "examples": [
                     {
                         "response": "feedback received"
+                    }
+                ]
+            },
+            "FeedbacksListResponse": {
+                "properties": {
+                    "feedbacks": {
+                        "items": {
+                            "type": "string"
+                        },
+                        "type": "array",
+                        "title": "Feedbacks"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "feedbacks"
+                ],
+                "title": "FeedbacksListResponse",
+                "description": "Model representing a response to a feedback list request.\n\nAttributes:\n    feedbacks: The list of feedback IDs.\n\nExample:\n    ```python\n    feedbacks_list_response = FeedbacksListResponse(\n        feedbacks=[\"12345678-abcd-0000-0123-456789abcdef\"]\n    )\n    ```",
+                "examples": [
+                    {
+                        "feedbacks": [
+                            "12345678-abcd-0000-0123-456789abcdef"
+                        ]
                     }
                 ]
             },
